<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
<fragment
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/map"
          class="com.google.android.gms.maps.SupportMapFragment"/>
</RelativeLayout>